--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -19,3 +19,9 @@ $color-white--transparent-large: rgba(255, 255, 255, .12);
 
 // border-radius
 $border-radius--card: 4px;
+
+// z-index
+$z-index--header: 10;
+$z-index--cursor: 100;
+$z-index--overlay: 1000;
+$z-index--skip-nav: 10000;
