--- a/assets/scss/base/_preset.scss
+++ b/assets/scss/base/_preset.scss
@@ -49,7 +49,7 @@ iframe {
 
 #skip-nav {
   position: relative;
-  z-index: 100;
+  z-index: $z-index--skip-nav;
 
   a {
     position: absolute;
@@ -333,7 +333,7 @@ iframe {
 
 .cursor {
   position: fixed;
-  z-index: 100;
+  z-index: $z-index--cursor;
   opacity: 0;
   pointer-events: none;
   transition: opacity .4s;
@@ -364,8 +364,8 @@ iframe {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 300;
-  opacity: 0.04;
+  z-index: $z-index--overlay;
+  opacity: .04;
   pointer-events: none;
   background-image: url("../images/overlay.gif");
   background-size: 480px;
