--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9;
+  z-index: $z-index--header;
   width: 100%;
   overflow: hidden;
   transition: height .6s cubic-bezier(.165,.84,.44,1);
@@ -156,7 +156,6 @@
   }
   &__menu-btn {
     display: none;
-    z-index: 10;
     width: 50px;
     height: 50px;
     grid-column-gap: 6px;
@@ -290,7 +289,6 @@
       top: -5%;
       bottom: 0;
       right: 0;
-      z-index: 5;
       width: 45%;
       transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1),
         opacity 1s cubic-bezier(0.23, 1, 0.32, 1);
